
0.05    ...
        - ...
        - removed vestigial load of Sub::UpLevel since it breaks
          the argument display in confess()

0.04    Thu Aug  9 20:56:14 CEST 2007
        - Automatically set strict and warnings like Moose does

0.03    Thu Aug  9 14:41:58 CEST 2007
        - Minor POD typo correction
        - Added some error messages for wrong type names
        - Coercion handler not exported without type object
        - Moved from Class::Inspector to Class::MOP::load_class

0.02    Wed Aug  8 20:33:42 CEST 2007
        - Changed declaration to croak when it sees '::' in a typename

0.01    Wed Aug  8 18:19:34 CEST 2007
        - Initial release
