@@ -5,7 +5,7 @@ use strict;
 use Test::More;
 use FindBin;
 use lib "$FindBin::Bin/lib";
-use MooseX::Types::Moose ':all';
+use MooseX::Types::Moose ':all', 'Bool';
 
 my @types = MooseX::Types::Moose->type_names;
 
@@ -13,7 +13,12 @@ plan tests => @types * 3;
 
 for my $t (@types) {
     ok my $code = __PACKAGE__->can($t), "$t() was exported";
-    is $code->(), $t, "$t() returns '$t'";
+    if ($code) {
+        is $code->(), $t, "$t() returns '$t'";
+    }
+    else {
+        diag "Skipping $t() call test";
+    }
     ok __PACKAGE__->can("is_$t"), "is_$t() was exported";
 }
 
